--- a/pass.html
+++ b/pass.html
@@ -101,7 +101,7 @@
                 <div data-form-element-key="ButtonNext" class="FormElement FormElement_Button ButtonNext">
                   <div class="Button">
                     <button name="ButtonNext" class="ButtonNext" data-elements-processor="">
-                      Submit </button>
+                      Submit </button> <a href="next.html">
                   </div>
                 </div>
                 <div class="meta">
