--- a/pass.html
+++ b/pass.html
@@ -100,8 +100,8 @@
                 </div>
                 <div data-form-element-key="ButtonNext" class="FormElement FormElement_Button ButtonNext">
                   <div class="Button">
-                    <button> <a href="next.html" name="ButtonNext" class="ButtonNext" data-elements-processor="">
-                      Submit <a href="next.html"> </button> <a href="next.html">
+                    <button  name="ButtonNext" class="ButtonNext" data-elements-processor="">
+                      Submit  </button> 
                   </div>
                 </div>
                 <div class="meta">
